h1. CHANGELOG

h3. 3.0.20 September 24, 2014

* specify 'foundation-rails' gem version for https://github.com/zurb/foundation/issues/5811

h3. 3.0.19 September 24, 2014

* accommodate new version of Figaro gem (closes #319)
* improve generation of 'app.json' file for Heroku Button deployment

h3. 3.0.18 September 22, 2014

* add Heroku option to 'deployment' recipe
* removed 'default' database preference and replaced with 'sqlite'
* remove 'Gemfile.lock' and run 'bundle install' in final stage

h3. 3.0.17 September 16, 2014

* fix for Procfile create or update (contributed by Dima Lunich)

h3. 3.0.16 September 14, 2014

* add Upmin option for an admin interface

h3. 3.0.15 September 8, 2014

* accommodate Devise for Rails 4.2.0.beta1

h3. 3.0.14 August 31, 2014

* use role-based authorization for 'rails-signup-download' app

h3. 3.0.13 August 27, 2014

* add 'rails-devise-roles' example application
* add 'Simple role-based' authorization option

h3. 3.0.12 August 26, 2014

* add 'faker' gem to development environment when RSpec is selected (contributed by ailnlv)
* remove 'rails_mailinglist_signup' example app from menu pending release of Rails 4.2
* specify no analytics for 'learn-rails' example app

h3. 3.0.11 August 3, 2014

* fix tests when Devise is selected without user pages (contributed by mengqing)
* fix tests when Devise and Pundit are selected with Devise Confirmable (contributed by mengqing)

h3. 3.0.10 July 13, 2014

* improve diagnostics in README (fixes #304)
* run 'deployment' recipe before 'extras' recipe
* don't run 'rvm gemset list' in 'extras' recipe
* change highlighting of prompts
* add 'analytics' recipe for Segment.io and Google Analytics

h3. 3.0.9 July 8, 2014

* generate pages in stage two (fix for rails-signup-download recipe)

h3. 3.0.8 July 7, 2014

* allow Pundit option when no authentication is chosen (fixes #310)
* specify GitHub repo for ActiveAdmin (contributed by Christopher Haupt)

h3. 3.0.7 July 5, 2014
