@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.20"
+  VERSION = "3.0.21"
 end
